manifests/eigen-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eigen-service
  namespace: eigen-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eigen-service
  template:
    metadata:
      labels:
        app: eigen-service
    spec:
      containers:
        - name: eigen-service
          image: timmyers/eigen-service:latest
          ports:
            - containerPort: 3000
