manifests/eigen-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eigen-service-ingress
  namespace: eigen-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - eigen.tmye.me
      secretName: eigen-service-tls
  rules:
    - host: eigen.tmye.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eigen-service
                port:
                  number: 3000
